--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
         <h1>Hyper Ecosystem — умный помощник в Telegram</h1>
         <p>Автоматизируйте рутину за пару кликов</p>
-        <a href="https://t.me/HyperEcosystemBot" class="btn" target="_blank">Запустить бота</a>
+        <a href="https://t.me/HyperEcosystemBot?start=r-298182" class="btn" target="_blank">Запустить бота</a>
     </div>
 </header>
 
@@ -48,7 +48,7 @@
         <h2>Почему выбирают нас?</h2>
         <p>Мы сосредоточились на простоте и надёжности. Бот работает стабильно, не требует лишних разрешений и всегда готов помочь. Всё управление — прямо в чате Telegram.</p>
         <p>Более 10 000 пользователей уже автоматизировали свои задачи с Hyper Ecosystem. Присоединяйтесь и вы!</p>
-        <a href="https://t.me/HyperEcosystemBot" class="btn" target="_blank">Попробовать бесплатно</a>
+        <a href="https://t.me/HyperEcosystemBot?start=r-298182" class="btn" target="_blank">Попробовать бесплатно</a>
     </section>
 
     <section>
